hphp/hack/test/typecheck/new_inference/eager_solve/obj_get_widen.php.exp
File "obj_get_widen.php", line 22, characters 18-18:
Could not find member x in an object of type C (Typing[4053])
  File "obj_get_widen.php", line 18, characters 33-33:
  This is why I think it is an object of type C
  File "obj_get_widen.php", line 10, characters 7-7:
  Declaration of C is here
File "obj_get_widen.php", line 22, characters 27-27:
Could not find member y in an object of type B (Typing[4053])
  File "obj_get_widen.php", line 18, characters 27-27:
  This is why I think it is an object of type B
  File "obj_get_widen.php", line 8, characters 7-7:
  Declaration of B is here
